DevOCL/src/objects/RuleSet__c.object
<CustomObject>
    <description>RuleSet Catalog and Rule object are in a 1 to many relationship. Contains Version, Rule Definition (JSON) and Activity Status</description>
    <fields>
        <fullName>ActionAutoNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ActionAutoNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_List__c</fullName>
        <label>Action List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsyncRequestID__c</fullName>
        <label>AsyncRequestID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_ID__c</fullName>
        <label>Catalog ID</label>
        <referenceTo>RuleSet_Catalog__c</referenceTo>
        <relationshipLabel>RuleSet</relationshipLabel>
        <relationshipName>RuleSet</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <defaultValue>&apos;Not Available&apos;</defaultValue>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compile_Errors__c</fullName>
        <defaultValue>&apos;None&apos;</defaultValue>
        <label>Compile Errors</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConditionAutoNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ConditionAutoNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition_List__c</fullName>
        <label>Condition List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Metadata_Container_Id__c</fullName>
        <label>Metadata Container Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_Container_UniqueId__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Metadata Container UniqueId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RuleSet_Name__c</fullName>
        <label>RuleSet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Definition__c</fullName>
        <label>Rule Definition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rules_Execution__c</fullName>
        <label>Rules Execution</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compiled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compile Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestClassAsyncRequestID__c</fullName>
        <label>TestClassAsyncRequestID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Class_Body__c</fullName>
        <label>Test Class Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Class_Name__c</fullName>
        <defaultValue>&apos;Not Available&apos;</defaultValue>
        <label>Test Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Class_Status__c</fullName>
        <defaultValue>&apos;Draft&apos;</defaultValue>
        <label>Test Class Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <displayFormat>V-{0000}</displayFormat>
        <label>Version</label>
        <type>AutoNumber</type>
    </fields>
    <label>RuleSet</label>
    <nameField>
        <displayFormat>RSID-{0000}</displayFormat>
        <label>RuleSet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RuleSet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>